...
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/addUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/add_user_to_chat"
                android:textAllCaps="false"
                android:textColor="@color/complete_white"
                android:visibility="gone"/>

            <Button
                android:id="@+id/removeUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="@string/remove_user_from_chat"
                android:textAllCaps="false"
                android:textColor="@color/complete_white"
...
