...
    <string name="title_chat_members">Chat members</string>
    <string name="add_user_to_chat">Add</string>
    <string name="remove_user_from_chat">Remove</string>
    <string name="chat_last_message">%1$s: %2$s</string>
    <string name="chat_last_message_sticker">%1$s sent a sticker</string>
    <string name="user_doesnt_exist">User \'%1$s\' doesn\'t exist in Mangosta. Send invitation?</string>
    <string name="invite_to_mangosta">Invite to Mangosta</string>
    <string name="add_people_to_create_chat">You have to add people to create a chat.</string>
    <string name="room_name">Room name</string>
    <string name="enter_room_name">Enter a name for the room</string>
    <string name="enter_room_name_hint">Enter room name here</string>
    <string name="enter_new_room_name">Enter a name for the room</string>
    <string name="room_name_changed">Room name changed</string>
...

    <string name="muc_chat_type">MUC</string>
    <string name="muc_light_chat_type">MUC Light</string>

    <string name="title_blocked_users">Blocked</string>
    <string name="button_unblock_all">Unblock all</string>
    <string name="user_not_found">User not found</string>

    <string name="blog_post_published">Blog post published</string>
    <string name="blog_post_publishing">Publishing blog post</string>

    <string name="title_login">Login</string>
    <string name="title_user_name">User</string>
...
